fix(styles): fix icon overlap in CWTS on iOS mozilla/fxa-content-server#5909), r=@vbudhram

--- a/packages/fxa-content-server/app/styles/modules/_branding.scss
+++ b/packages/fxa-content-server/app/styles/modules/_branding.scss
@@ -41,6 +41,9 @@
   }
 
   .screen-choose-what-to-sync & {
+    // in Blink and Webkit it is not enough to use `!important` opacity
+    // also need to add animation:none to avoid overrides from `keyframes`
+    animation: none;
     // the 'choose-what-to-sync' view is a special case view
     // where we want to hide the logo and not animate it
     // it uses `!important` to avoid the fade-in effect and inline styles.
